--- a/1_introduction.tex
+++ b/1_introduction.tex
@@ -1,4 +1,6 @@
 \section{Introduction}
+This is a test
+
 The Antarctic Impulsive Transient Antenna (ANITA) experiment is a NASA-funded, balloon-borne experiment aiming primarily to detect Ultra-High-Energy (UHE) neutrinos and cosmic rays~\cite{ANITA1detector,ANITA1paper,ANITA2paper,ANITA2erratum}.
 UHE neutrinos may be produced when cosmic rays interact with the
 cosmic microwave background, either through the Greisen Zatsepin
