--- a/6_validation.tex
+++ b/6_validation.tex
@@ -7,7 +7,7 @@ the flights (Subsection~\ref{subsec:validation_flight}).
 
 \subsection{Comparisons with lab measurements}
 \label{subsec:validation_lab}
-Before each of the ANITA flights a series of calibration measurements was
+Before each of the ANITA flights, a series of calibration measurements was
 taken at the NASA Long Duration Balloon Facility near McMurdo Station, Antarctica.
 These measurements are used to cross-check different parts of the simulation.
 
